--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 			</article>
 			<article id="typo__text-transform">
 				<header>
-					<h3>text-align</h3> </header>
+					<h3>text-transform</h3> </header>
 				<div><span class="fs-2r fs-4r@md tt-n">none</span> <code>tt-n</code></div>
 				<div><span class="fs-2r fs-4r@md tt-u">uppercase</span> <code>tt-u</code></div>
 			</article>
@@ -987,7 +987,7 @@
 					<div class="fg-2 brw-medium p-1r bs-.125r:h">2 <code>fg-2</code></div>
 					<div class="fg-4 brw-medium p-1r bs-.125r:h">4 <code>fg-4</code></div>
 				</div>
-				<div class="d-n@md mt-1r c-b.3 ff-s fs-i"> View this demo a larger screen, to show the effect. </div>
+				<div class="d-n@md mt-1r c-b.3 ff-s fs-i"> View this demo on a larger screen, to show the effect. </div>
 			</article>
 			<article id="layout__flex-shrink">
 				<header>
