Added blank Docs and box-shadow.
- bigger “back to top” button
- link to blank.html
- added box-shadow

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 					<ul>
 						<li><a href="#theme__border-width">border-width</a></li>
 						<li><a href="#theme__border-radius">border-radius</a></li>
-						<!--<li><a href="#theme__box-shadow">box-shadow</a></li>-->
+						<li><a href="#theme__box-shadow">box-shadow</a></li>
 						<li><a href="#theme__color">color</a></li>
 						<li><a href="#theme__background-color">background-color</a></li>
 						<li><a href="#theme__border-color">border-color</a></li>
@@ -594,7 +594,7 @@
 				<div><span class="p-a r-1r fs-1.5r">absolute</span> <code>p-a</code></div>
 				<div>
 					<nav>
-						<a class="p-f zi-2 b-1r r-1r h-2r w-2r br-100% bgc-w.9 d-f ai-c jc-c bgc-b:h c-w:h bgc-b.7:a bs-.125r" href="#top">
+						<a class="p-f zi-2 b-1r r-1r h-4r w-4r br-100% bgc-w.9 d-f ai-c jc-c bgc-b:h c-w:h bgc-b.7:a bs-.125r" href="#top">
 							<svg data-icon="chevronUp" viewBox="0 0 32 32" class="h-1r w-1r">
 								<title>Arrow pointing upwards</title>
 								<path d="M1 20 L16 6 L31 20 L27 24 L16 14 L5 24 z"></path>
@@ -1116,6 +1116,17 @@
 						<div class="br-1r blr-0 p-.5r c-w bgc-b d-ib"> 0 <code>blr-0</code> </div>
 					</div>
 				</section>
+			</article>
+			<article id="theme__box-shadow">
+				<header>
+					<h3>box-shadow</h3> </header>
+				<p>Including <b>hover classes</b>: <code>bs-.5r:h</code><br>Hover <i>over</i> or tap <i>on</i> the circles for a demo.</p>
+				<div class="d-f fw-w mr_1r">
+					<div class="bs-.0625r bs-.5r:h br-100% mt-1r p-.5r bgc-w d-ib h-8r w-8r d-f fd-c ai-c jc-c">.0625rem <code>bs-.0625r</code> </div>
+					<div class="bs-.125r bs-.5r:h br-100% mt-1r p-.5r bgc-w d-ib h-8r w-8r d-f fd-c ai-c jc-c">.125rem <code>bs-.125r</code> </div>
+					<div class="bs-.25r bs-.5r:h br-100% mt-1r p-.5r bgc-w d-ib h-8r w-8r d-f fd-c ai-c jc-c">.25rem <code>bs-.25r</code> </div>
+					<div class="bs-.5r bs-.125r:h br-100% mt-1r p-.5r bgc-w d-ib h-8r w-8r d-f fd-c ai-c jc-c">.5rem <code>bs-.5r</code> </div>
+				</div>
 			</article>
 			<article id="theme__color">
 				<header>
