Added another box-shadow step (1rem)

--- a/index.html
+++ b/index.html
@@ -1120,12 +1120,13 @@
 			<article id="theme__box-shadow">
 				<header>
 					<h3>box-shadow</h3> </header>
-				<p>Including <b>hover classes</b>: <code>bs-.5r:h</code><br>Hover <i>over</i> or tap <i>on</i> the circles for a demo.</p>
+				<p>Including <b>hover classes</b>: <code>bs-.25r:h</code><br>Hover over the circles for a demo.</p>
 				<div class="d-f fw-w mr_1r">
-					<div class="bs-.0625r bs-.5r:h br-100% mt-1r p-.5r bgc-w d-ib h-8r w-8r d-f fd-c ai-c jc-c">.0625rem <code>bs-.0625r</code> </div>
-					<div class="bs-.125r bs-.5r:h br-100% mt-1r p-.5r bgc-w d-ib h-8r w-8r d-f fd-c ai-c jc-c">.125rem <code>bs-.125r</code> </div>
-					<div class="bs-.25r bs-.5r:h br-100% mt-1r p-.5r bgc-w d-ib h-8r w-8r d-f fd-c ai-c jc-c">.25rem <code>bs-.25r</code> </div>
-					<div class="bs-.5r bs-.125r:h br-100% mt-1r p-.5r bgc-w d-ib h-8r w-8r d-f fd-c ai-c jc-c">.5rem <code>bs-.5r</code> </div>
+					<div class="bs-.0625r bs-1r:h br-100% mt-1r p-.5r bgc-w d-ib h-8r w-8r d-f fd-c ai-c jc-c">.0625rem <code>bs-.0625r</code> </div>
+					<div class="bs-.125r bs-1r:h br-100% mt-1r p-.5r bgc-w d-ib h-8r w-8r d-f fd-c ai-c jc-c">.125rem <code>bs-.125r</code> </div>
+					<div class="bs-.25r bs-1r:h br-100% mt-1r p-.5r bgc-w d-ib h-8r w-8r d-f fd-c ai-c jc-c">.25rem <code>bs-.25r</code> </div>
+					<div class="bs-.5r bs-1r:h br-100% mt-1r p-.5r bgc-w d-ib h-8r w-8r d-f fd-c ai-c jc-c">.5rem <code>bs-.5r</code> </div>
+					<div class="bs-1r bs-.25r:h br-100% mt-1r p-.5r bgc-w d-ib h-8r w-8r d-f fd-c ai-c jc-c">1rem <code>bs-1r</code> </div>
 				</div>
 			</article>
 			<article id="theme__color">
