Changed the iframe style to create a smartphone-like mock-up.

--- a/blank.html
+++ b/blank.html
@@ -510,7 +510,7 @@
 					<h3>iframe</h3></header>
 				<p>The iframe element represents a nested browsing context.</p>
 				<div>
-					<iframe src="index.html" height="667" width="375"></iframe>
+					<iframe src="index.html" height="667" width="375" style="border-width: 2rem 1rem 4rem; border-radius: 1rem;"></iframe>
 					<iframe id="forecast_embed" height="245" style="width:100%" src="http://forecast.io/embed/#lat=48.4222&lon=10.0064&name=Ulm&units=uk"></iframe>
 				</div>
 				<footer>
