--- a/play_layouttest.html
+++ b/play_layouttest.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>blink | playground</title>
+	<title>blink.css | playground</title>
 	<link href="css/blank.css" rel="stylesheet">
 	<link href="css/blink.css" rel="stylesheet"> </head>
 
