Added a link to blink.css

--- a/blank.html
+++ b/blank.html
@@ -85,6 +85,7 @@
 	<header id="top">
 		<h1 class="c-cyan">blank<span style="color: var(--color-text-lighter); font-weight: 100;">.css</span></h1>
 		<p><u>A starting point for elegant html elements.</u></p>
+		<p style="color:lightgrey">Have a look at <a href="index.html">blink.css</a> — a mighty CSS toolkit.</p>
 	</header>
 	<nav id="toc">
 		<ul>
