--- a/index.html
+++ b/index.html
@@ -9,39 +9,39 @@
 	<link href="css/blink.css" rel="stylesheet">
 	<style>
 		/* Site container and spacing: */
-		
+
 		nav#toc {
 			margin-bottom: var(--2);
 		}
-		
-		header > h2 {
+
+		header>h2 {
 			margin-top: var(--2);
 		}
-		
+
 		article {
 			padding: var(--2);
 		}
-		
+
 		article:last-of-type {
 			margin-bottom: 0;
 		}
-		
+
 		article:nth-child(odd) {
 			background-color: var(--darken);
 		}
 		/* Navigation list for table of contents: */
-		
-		nav#toc > ul > li {
+
+		nav#toc>ul>li {
 			margin: 0 var(--1) var(--1) 0;
 			width: var(--16);
 		}
-		
+
 		nav#toc a {
 			padding: var(--\.5) 0;
 			display: block;
 		}
-		
-		article > header > h3 {
+
+		article>header>h3 {
 			display: inline-block;
 			background-color: var(--color-text);
 			color: var(--bg-color);
@@ -49,13 +49,13 @@
 			font-family: 'Roboto Mono', 'Source Code Pro', Menlo, Consolas, 'Liberation Mono', monospace
 		}
 		/* Fake page transition (fade-in): */
-		
+
 		@keyframes fade {
 			from {
 				opacity: 0;
 			}
 		}
-		
+
 		body {
 			animation: 1s fade ease-in-out
 		}
@@ -66,7 +66,8 @@
 	<nav id="nav__global" class="ox-s ws-nw px-1r bgc-b.1 d-f ff-m fs-.75r tt-u ls-.25e c-red">
 		<!--<a href="#" class="mr-1r c-b:h py-1r">Overview</a>--><a href="#" class="mr-1r c-b:h py-1r bbw-medium fw-700">Docs</a>
 		<!--<a href="#" class="mr-1r c-b:h py-1r">Components</a>-->
-		<div class="d-ib ml-a"><a href="blank.html" class="mr-1r c-b.4 c-b:h py-1r">blank.css</a><a href="https://github.com/blinkcss/blinkcss.github.io" class="c-b.4 c-b:h py-1r"><span class="mr-.5r d-n d-ib@md">Github</span><svg aria-hidden="true" class="h-2r w-2r p-r t-.5r" version="1.1" viewBox="0 0 16 16" width="32"><path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z"></path></svg></a></div> </nav>
+		<div class="d-ib ml-a"><a href="blank.html" class="mr-1r c-b.4 c-b:h py-1r">blank.css</a><a href="https://github.com/blinkcss/blinkcss.github.io" class="c-b.4 c-b:h py-1r"><span class="mr-.5r d-n d-ib@md">Github</span><svg aria-hidden="true" class="h-2r w-2r p-r t-.5r" version="1.1" viewBox="0 0 16 16" width="32"><path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z"></path></svg></a></div>
+	</nav>
 	<div class="bgc-red fs-2r fs-4r@md fs-8r@lg fs-16r@xl fw-100 ff-s c-w.1 p-2r fs-i">blink!</div>
 	<header id="top" class="p-2r">
 		<h1 class="m-0 c-red c-w:h">blink<span class="c-b.1">.css</span></h1>
@@ -1380,7 +1381,9 @@
 			</article>
 		</section>
 	</main>
-	<footer class="p-2r bgc-b c-w">Created by <address class="d-i"><a href="mailto:gerbaulet@hs-ulm.de">Prof. Damian Gerbaulet</a> (Ulm University of Applied Sciences).</address> Greatly inspired by <a href="http://basscss.com" target="_blank">basscss</a>, <a href="http://tachyons.io" target="_blank">tachyons</a> and <a href="https://github.com/chantastic/minions.css" target="_blank">minions</a>.</footer>
+	<footer class="p-2r bgc-b c-w">Created by <address class="d-i"><a href="mailto:gerbaulet@hs-ulm.de">Prof. Damian Gerbaulet</a> (Ulm University of Applied Sciences).</address> Greatly inspired by <a href="http://basscss.com" target="_blank">basscss</a>,
+		<a href="http://tachyons.io"
+						target="_blank">tachyons</a> and <a href="https://github.com/chantastic/minions.css" target="_blank">minions</a>.</footer>
 </body>
 
 </html>
