--- a/index.html
+++ b/index.html
@@ -1382,8 +1382,7 @@
 		</section>
 	</main>
 	<footer class="p-2r bgc-b c-w">Created by <address class="d-i"><a href="mailto:gerbaulet@hs-ulm.de">Prof. Damian Gerbaulet</a> (Ulm University of Applied Sciences).</address> Greatly inspired by <a href="http://basscss.com" target="_blank">basscss</a>,
-		<a href="http://tachyons.io"
-						target="_blank">tachyons</a> and <a href="https://github.com/chantastic/minions.css" target="_blank">minions</a>.</footer>
+		<a href="http://tachyons.io" target="_blank">tachyons</a> and <a href="https://github.com/chantastic/minions.css" target="_blank">minions</a>.</footer>
 </body>
 
 </html>
