Fixed description of bottom module.

--- a/index.html
+++ b/index.html
@@ -663,17 +663,17 @@
 				<header>
 					<h3>bottom</h3> </header>
 				<div class="brw:medium brw:0@md ox:s ws:nw py:4r">
-					<div class="bbw:thin d:ib p:r b:-4r p:.5r"><span>-4rem</span> <code>b--4r</code></div>
-					<div class="bbw:thin d:ib p:r b:-2r p:.5r"><span>-2rem</span> <code>b--2r</code></div>
-					<div class="bbw:thin d:ib p:r b:-1r p:.5r"><span>-1rem</span> <code>b--1r</code></div>
-					<div class="bbw:thin d:ib p:r b:-.5r p:.5r"><span>-.5rem</span> <code>b--.5r</code></div>
-					<div class="bbw:thin d:ib p:r b:-.25r p:.5r"><span>-.25rem</span> <code>b--.25r</code></div>
+					<div class="bbw:thin d:ib p:r b:-4r p:.5r"><span>-4rem</span> <code>b:-4r</code></div>
+					<div class="bbw:thin d:ib p:r b:-2r p:.5r"><span>-2rem</span> <code>b:-2r</code></div>
+					<div class="bbw:thin d:ib p:r b:-1r p:.5r"><span>-1rem</span> <code>b:-1r</code></div>
+					<div class="bbw:thin d:ib p:r b:-.5r p:.5r"><span>-.5rem</span> <code>b:-.5r</code></div>
+					<div class="bbw:thin d:ib p:r b:-.25r p:.5r"><span>-.25rem</span> <code>b:-.25r</code></div>
 					<div class="bbw:thin d:ib p:r b:0 p:.5r"><span>0</span> <code>b:0</code></div>
-					<div class="bbw:thin d:ib p:r b:.25r p:.5r"><span>.25rem</span> <code>b-.25r</code></div>
-					<div class="bbw:thin d:ib p:r b:.5r p:.5r"><span>.5rem</span> <code>b-.5r</code></div>
-					<div class="bbw:thin d:ib p:r b:1r p:.5r"><span>1rem</span> <code>b-1r</code></div>
-					<div class="bbw:thin d:ib p:r b:2r p:.5r"><span>2rem</span> <code>b-2r</code></div>
-					<div class="bbw:thin d:ib p:r b:4r p:.5r"><span>4rem</span> <code>b-4r</code></div>
+					<div class="bbw:thin d:ib p:r b:.25r p:.5r"><span>.25rem</span> <code>b:.25r</code></div>
+					<div class="bbw:thin d:ib p:r b:.5r p:.5r"><span>.5rem</span> <code>b:.5r</code></div>
+					<div class="bbw:thin d:ib p:r b:1r p:.5r"><span>1rem</span> <code>b:1r</code></div>
+					<div class="bbw:thin d:ib p:r b:2r p:.5r"><span>2rem</span> <code>b:2r</code></div>
+					<div class="bbw:thin d:ib p:r b:4r p:.5r"><span>4rem</span> <code>b:4r</code></div>
 					<div class="p:a w:90% bbw:thin bc:cyan"></div>
 				</div>
 			</article>
