Added MIT license, fixed typos regarding new naming.

--- a/blank.html
+++ b/blank.html
@@ -85,7 +85,7 @@
 	<header id="top">
 		<h1 class="c-cyan">blank<span style="color: var(--color-text-lighter); font-weight: 100;">.css</span></h1>
 		<p><u>A starting point for elegant html elements.</u></p>
-		<p style="color:lightgrey">Have a look at <a href="index.html">blink UI</a> — a mighty css toolkit for web and interface design in the blink of an eye.</p>
+		<p style="color: var(--color-text-lighter); font-weight: 100;">Have a look at <a href="index.html">blink UI</a> — a mighty css toolkit for web and interface design in the blink of an eye.</p>
 	</header>
 	<nav id="toc">
 		<ul>
@@ -703,7 +703,7 @@
 	</main>
 	<footer>
 		<p>The html element overview was inspired by the <a href="http://github.com/cbracco/html5-test-page" target="_blank">html5 test page</a>. Additional element descriptions were taken from <a href="https://www.w3.org/TR/html/" target="_blank">w3.org</a>.</p>
-		<address>Created by <a href="mailto:gerbaulet@hs-ulm.de">Prof. Damian Gerbaulet</a> (Ulm University of Applied Sciences).</address> </footer>
+		<address>Created by <a href="mailto:gerbaulet@hs-ulm.de">Damian Gerbaulet</a> (Professor at the University of Applied Sciences Ulm, Germany)</address> </footer>
 	<!-- Drawing a circle inside the <canvas> element: -->
 	<script>
 		var c = document.getElementById("myCanvas");
