--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 	<title>blink | docs</title>
 	<link href="css/blank.css" rel="stylesheet">
 	<link href="css/blink.css" rel="stylesheet">
+	<link rel="apple-touch-icon" href="blink.png">
+	<meta name="apple-mobile-web-app-capable" content="yes">
 	<style>
 		/* Site container and spacing: */
 
