--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>blink | docs</title>
 	<link href="css/blank.css" rel="stylesheet">
 	<link href="css/blink.css" rel="stylesheet">
 	<link rel="apple-touch-icon" href="/blink.png">
 	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-title" content="blinkUI">
+	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+	<meta name="theme-color" content="#f53d5c">
 	<style>
 		/* Site container and spacing: */
 
