Consistent look for overflow-x containers.

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 			<article id="typo__line-height">
 				<header class="p:r">
 					<h3>line-height</h3> <small class="p:a t:0 r:0 fw:900 byw:thin p:.5r c:red bgc:w.8" style="writing-mode: vertical-rl;"><u>responsive</u></small> </header>
-				<div class="ox:s ws:nw">
+				<div class="ox:s ws:nw brw:medium brw:0@lg">
 					<p class="fs:8r lh:.875 byw:thin">0.875 <code class="fs:.875r">lh:.875</code>
 						<br>Berlin</p>
 					<p class="fs:4r lh:1 byw:thin"> 1 <code class="fs:.875r">lh:1</code>
@@ -188,7 +188,7 @@
 			<article id="typo__font-weight">
 				<header>
 					<h3>font-weight</h3> </header>
-				<div class="ox:s ws:nw lh:1">
+				<div class="ox:s ws:nw lh:1 brw:medium brw:0@lg">
 					<p> <span class="fw:i fs:2r fs:4r@md">initial</span> <code>fw:i</code> </p>
 					<p> <span class="fw:l fs:2r fs:4r@md">lighter</span> <code>fw:l</code> </p>
 					<p> <span class="fw:n fs:2r fs:4r@md">normal</span> <code>fw:n</code> </p>
@@ -247,7 +247,7 @@
 				<header class="p:r">
 					<h3>margin</h3> <small class="p:a t:0 r:0 fw:900 byw:thin p:.5r c:red bgc:w.8" style="writing-mode: vertical-rl;"><u>responsive</u></small> </header>
 				<h4><code>margin</code></h4>
-				<div class="lh:1 ox:s ws:nw">
+				<div class="ox:s ws:nw lh:1 brw:medium brw:0@lg">
 					<div class="bw:thin d:ib">
 						<div class="m:0 c:w bgc:b d:ib">0</div>
 					</div> <code>m:0</code>
@@ -280,7 +280,7 @@
 						<div class="m:16r bgc:w d:ib">16rem</div>
 					</div> <code>m:16r</code> </div>
 				<h4><code>margin-top</code></h4>
-				<div class="py:1r lh:1  ox:s ws:nw brw:medium brw:0@lg">
+				<div class="py:1r lh:1 ox:s ws:nw brw:medium brw:0@lg">
 					<div class="bw:thin d:ib btw:medium">
 						<div class="mt:0 c:w bgc:b d:ib">0</div>
 					</div> <code>mt:0</code>
@@ -632,7 +632,7 @@
 			<article id="layout__top">
 				<header>
 					<h3>top</h3> </header>
-				<div class="brw:medium brw:0@md ox:s ws:nw py:4r">
+				<div class="ox:s ws:nw brw:medium brw:0@lg py:4r">
 					<div class="p:a w:90% btw:thin bc:cyan"></div>
 					<div class="btw:thin d:ib p:r t:-4r p:.5r"><span>-4rem</span> <code>t:-4r</code></div>
 					<div class="btw:thin d:ib p:r t:-2r p:.5r"><span>-2rem</span> <code>t:-2r</code></div>
@@ -667,7 +667,7 @@
 			<article id="layout__bottom">
 				<header>
 					<h3>bottom</h3> </header>
-				<div class="brw:medium brw:0@md ox:s ws:nw py:4r">
+				<div class="ox:s ws:nw  brw:medium brw:0@lg py:4r">
 					<div class="bbw:thin d:ib p:r b:-4r p:.5r"><span>-4rem</span> <code>b:-4r</code></div>
 					<div class="bbw:thin d:ib p:r b:-2r p:.5r"><span>-2rem</span> <code>b:-2r</code></div>
 					<div class="bbw:thin d:ib p:r b:-1r p:.5r"><span>-1rem</span> <code>b:-1r</code></div>
@@ -762,7 +762,7 @@
 				<header>
 					<h3>white-space</h3> </header>
 				<div class="ws:n lh:1"><span class="fs:2r fs:4r@md">normal</span> <code>ws:n</code> <span class="c:b.2 fw:200 fs:2r fs:4r@md">normal normal normal normal normal normal normal</span></div>
-				<div class="ws:nw ox:s brw:medium"><span class="fs:2r fs:4r@md">nowrap</span> <code>ws:nw</code> <span class="c:b.2 fw:200 fs:2r fs:4r@md">nowrap nowrap nowrap nowrap nowrap nowrap nowrap</span></div>
+				<div class="ws:nw ox:s brw:medium"><span class="fs:2r fs:4r@md">nowrap</span> <code>ws:nw</code> <span class="c:b.2 fw:200 fs:2r fs:4r@md">nowrap nowrap nowrap nowrap nowrap nowrap nowrap nowrap nowrap</span></div>
 				<div class="ws:p"><span class="fs:2r fs:4r@md">pre</span> <code>ws:p</code> <span class="c:b.2 fw:200 fs:2r fs:4r@md">   &middot;   pre   &middot;   pre</span></div>
 			</article>
 		</section>
