Subtler “hover” and “responsive” icons.

--- a/index.html
+++ b/index.html
@@ -155,7 +155,9 @@
 			</article>
 			<article id="typo__font-size">
 				<header class="p:r">
-					<h3>font-size</h3> <small class="p:a t:0 r:0 fw:900 byw:thin p:.5r c:red bgc:w.8" style="writing-mode: vertical-rl;"><u>responsive</u></small> </header>
+					<h3>font-size</h3>
+					<div class="br:100% p:.5r bgc:w c:red h:2r w:2r d:f ai:c jc:c p:a t:0 r:0 bs:.0625r">R</div>
+				</header>
 				<div style="white-space: nowrap;" class="ox:s brw:medium brw:0@lg">
 					<p class="lh:.875"> <span class="fs:16r">16rem</span> <code>fs:16r</code> </p>
 					<p class="lh:1"> <span class="fs:8r">8rem</span> <code>fs:8r</code> </p>
@@ -169,7 +171,9 @@
 			</article>
 			<article id="typo__line-height">
 				<header class="p:r">
-					<h3>line-height</h3> <small class="p:a t:0 r:0 fw:900 byw:thin p:.5r c:red bgc:w.8" style="writing-mode: vertical-rl;"><u>responsive</u></small> </header>
+					<h3>line-height</h3>
+					<div class="br:100% p:.5r bgc:w c:red h:2r w:2r d:f ai:c jc:c p:a t:0 r:0 bs:.0625r">R</div>
+				</header>
 				<div class="ox:s ws:nw brw:medium brw:0@lg">
 					<p class="fs:8r lh:.875 byw:thin">0.875 <code class="fs:.875r">lh:.875</code>
 						<br>Berlin</p>
@@ -214,7 +218,9 @@
 			</article>
 			<article id="typo__text-align">
 				<header class="p:r">
-					<h3>text-align</h3> <small class="p:a t:0 r:0 fw:900 byw:thin p:.5r c:red bgc:w.8" style="writing-mode: vertical-rl;"><u>responsive</u></small> </header>
+					<h3>text-align</h3>
+					<div class="br:100% p:.5r bgc:w c:red h:2r w:2r d:f ai:c jc:c p:a t:0 r:0 bs:.0625r">R</div>
+				</header>
 				<div class="lh:1 w:100%">
 					<p class="ta:l"><span class="fs:2r fs:4r@md">left</span> <code>ta:l</code></p>
 					<p class="ta:j" style="hyphens:auto;"><span class="fs:2r fs:4r@md">justify <span class="c:b.2 fw:200">justify justify justify justify justify justify justify justify justify justify</span></span> <code>ta:j</code></p>
@@ -245,7 +251,9 @@
 				<h2 class="pl:2r fs:4r@lg fw:100@lg mt:4r">Layout</h2> </header>
 			<article id="layout__margin">
 				<header class="p:r">
-					<h3>margin</h3> <small class="p:a t:0 r:0 fw:900 byw:thin p:.5r c:red bgc:w.8" style="writing-mode: vertical-rl;"><u>responsive</u></small> </header>
+					<h3>margin</h3>
+					<div class="br:100% p:.5r bgc:w c:red h:2r w:2r d:f ai:c jc:c p:a t:0 r:0 bs:.0625r">R</div>
+				</header>
 				<h4><code>margin</code></h4>
 				<div class="ox:s ws:nw lh:1 brw:medium brw:0@lg">
 					<div class="bw:thin d:ib">
@@ -473,7 +481,9 @@
 			</article>
 			<article id="layout__padding">
 				<header class="p:r">
-					<h3>padding</h3> <small class="p:a t:0 r:0 fw:900 byw:thin p:.5r c:red bgc:w.8" style="writing-mode: vertical-rl;"><u>responsive</u></small> </header>
+					<h3>padding</h3>
+					<div class="br:100% p:.5r bgc:w c:red h:2r w:2r d:f ai:c jc:c p:a t:0 r:0 bs:.0625r">R</div>
+				</header>
 				<div>
 					<div class="fs:1r w:2r h:2r c:w bgc:red br:100% d:f jc:c ai:c my:1r fw:900">?!</div>
 					<p>Similar to the margin module:</p> <code class="fs:1.5r">pt:4r</code> = <code class="fs:1.5r">padding-top:4rem</code></div>
@@ -576,7 +586,9 @@
 			</article>
 			<article id="layout__display">
 				<header class="p:r">
-					<h3>display</h3> <small class="p:a t:0 r:0 fw:900 byw:thin p:.5r c:red bgc:w.8" style="writing-mode: vertical-rl;"><u>responsive</u></small> </header>
+					<h3>display</h3>
+					<div class="br:100% p:.5r bgc:w c:red h:2r w:2r d:f ai:c jc:c p:a t:0 r:0 bs:.0625r">R</div>
+				</header>
 				<div> <span class="d:b bgc:b c:w mb:.5r">block <code class="bgc:w.9 c:b">d:b</code></span>
 					<div class="mb:.5r">
 						<div class="d:i bgc:b c:w h:4r">inline </div> <code>d:i</code> </div>
@@ -600,7 +612,9 @@
 			</article>
 			<article id="layout__position">
 				<header class="p:r">
-					<h3>position</h3> <small class="p:a t:0 r:0 fw:900 byw:thin p:.5r c:red bgc:w.8" style="writing-mode: vertical-rl;"><u>responsive</u></small></header>
+					<h3>position</h3>
+					<div class="br:100% p:.5r bgc:w c:red h:2r w:2r d:f ai:c jc:c p:a t:0 r:0 bs:.0625r">R</div>
+				</header>
 				<div><span class="p:s fs:1.5r">static</span> <code>p:s</code></div>
 				<div><span class="p:r l:-1r fs:1.5r">relative</span> <code>p:r</code></div>
 				<div><span class="p:a r:1r fs:1.5r">absolute</span> <code>p:a</code></div>
@@ -771,7 +785,9 @@
 				<h2 class="pl:2r fs:4r@lg fw:100@lg mt:4r">Flexbox</h2> </header>
 			<article id="layout__flex-direction">
 				<header class="p:r">
-					<h3>flex-direction</h3> <small class="p:a t:0 r:0 fw:900 byw:thin p:.5r c:red bgc:w.8" style="writing-mode: vertical-rl;"><u>responsive</u></small> </header>
+					<h3>flex-direction</h3>
+					<div class="br:100% p:.5r bgc:w c:red h:2r w:2r d:f ai:c jc:c p:a t:0 r:0 bs:.0625r">R</div>
+				</header>
 				<div class="my_2r">
 					<div class="d:f fd:r jc:sb w:16r">
 						<div class="mr:1r">row <code>fd:r</code></div>
@@ -1067,7 +1083,9 @@
 				<h2 class="pl:2r fs:4r@lg fw:100@lg mt:4r">Theming</h2> </header>
 			<article id="theme__border-width">
 				<header class="p:r">
-					<h3>border-width</h3> <small class="p:a t:0 r:0 fw:900 byw:thin p:.5r c:red bgc:w.8" style="writing-mode: vertical-rl;"><u>responsive</u></small> </header>
+					<h3>border-width</h3>
+					<div class="br:100% p:.5r bgc:w c:red h:2r w:2r d:f ai:c jc:c p:a t:0 r:0 bs:.0625r">R</div>
+				</header>
 				<h4><code>border-width</code></h4>
 				<div class="bw:thick p:.5r d:ib@md mr:1r mb:.5r">thick <code>bw:thick</code></div>
 				<div class="bw:medium p:.5r d:ib@md mr:1r mb:.5r">medium <code>bw:medium</code></div>
@@ -1130,8 +1148,10 @@
 				</section>
 			</article>
 			<article id="theme__box-shadow">
-				<header>
-					<h3>box-shadow</h3> </header>
+				<header class="p:r">
+					<h3>box-shadow</h3>
+					<div class="br:100% p:.5r bgc:w c:violet h:2r w:2r d:f ai:c jc:c p:a t:0 r:0 bs:.0625r">H</div>
+				</header>
 				<p>Including <b>hover classes</b>: <code>bs:.25r:h</code><br>Hover over the circles for a demo.</p>
 				<div class="d:f fw:w mr_1r">
 					<div class="bs:.0625r bs:1r:h br:100% mt:1r p:.5r bgc:w d:ib h:8r w:8r d:f fd:c ai:c jc:c">.0625rem <code>bs:.0625r</code> </div>
@@ -1142,8 +1162,10 @@
 				</div>
 			</article>
 			<article id="theme__color">
-				<header>
-					<h3>color</h3> </header>
+				<header class="p:r">
+					<h3>color</h3>
+					<div class="br:100% p:.5r bgc:w c:violet h:2r w:2r d:f ai:c jc:c p:a t:0 r:0 bs:.0625r">H</div>
+				</header>
 				<!-- transparent -->
 				<div class="p:1r c:t bw:thick fw:b ta:c"> <span class="c:b">transparent <small>(applied to border)</small></span>
 					<br> <code class="c:b">c:t</code> </div>
@@ -1225,8 +1247,10 @@
 				</div>
 			</article>
 			<article id="theme__background-color">
-				<header>
-					<h3>background-color</h3> </header>
+				<header class="p:r">
+					<h3>background-color</h3>
+					<div class="br:100% p:.5r bgc:w c:violet h:2r w:2r d:f ai:c jc:c p:a t:0 r:0 bs:.0625r">H</div>
+				</header>
 				<!-- transparent -->
 				<div class="p:1r bgc:t bw:thick fw:b fb:20% ta:c bc:w"> transparent
 					<br> <code class="c:b">bgc:t</code> </div>
@@ -1307,8 +1331,10 @@
 						<br> <code>bgc:w.1</code> </div>
 				</div> <small>The white shades are placed on a black background in order to show the blending effect.</small> </article>
 			<article id="theme__border-color">
-				<header>
-					<h3>border-color</h3> </header>
+				<header class="p:r">
+					<h3>border-color</h3>
+					<div class="br:100% p:.5r bgc:w c:violet h:2r w:2r d:f ai:c jc:c p:a t:0 r:0 bs:.0625r">H</div>
+				</header>
 				<!-- transparent -->
 				<div class="p:1r bc:t bw:thick fw:b fb:20% ta:c"> <span>transparent</span>
 					<br> <code>bc:t</code> </div>
