Added negative tracking (letter-spacing).

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 				</header>
 				<div class="lh:1 w:100%">
 					<p class="ta:l"><span class="fs:2r fs:4r@md">left</span> <code>ta:l</code></p>
-					<p class="ta:j" style="hyphens:auto;"><span class="fs:2r fs:4r@md">justify <span class="c:b.2 fw:200">justify justify justify justify justify justify justify justify justify justify</span></span> <code>ta:j</code></p>
+					<p class="ta:j" style="hyphens:auto;"><span class="fs:2r fs:4r@md">justify <span class="c:b.2 fw:200">justify justify justify justify justify justify justify justify justify justify justify justify</span></span> <code>ta:j</code></p>
 					<p class="ta:c"><span class="fs:2r fs:4r@md">center</span> <code>ta:c</code></p>
 					<p class="ta:r"><span class="fs:2r fs:4r@md">right</span> <code>ta:r</code></p>
 				</div>
@@ -237,8 +237,10 @@
 			<article id="typo__letter-spacing">
 				<header>
 					<h3>letter-spacing</h3> </header>
-				<div class="fw:200">
+				<div class="fw:100">
+					<div><span class="ls:-.0625e fs:2r fs:4r@md tt:u">-.0625em</span> <code class="fw:i">ls:-.0625e</code></div>
 					<div><span class="ls:n fs:2r fs:4r@md tt:u">normal</span> <code class="fw:i">ls:n</code></div>
+					<div><span class="ls:.0625e fs:2r fs:4r@md tt:u">.0625em</span> <code class="fw:i">ls:.0625e</code></div>
 					<div><span class="ls:.125e fs:2r fs:4r@md tt:u">.125em</span> <code class="fw:i">ls:.125e</code></div>
 					<div><span class="ls:.25e fs:2r fs:4r@md tt:u">.25em</span> <code class="fw:i">ls:.25e</code></div>
 					<div><span class="ls:.5e fs:2r fs:4r@md tt:u">.5em</span> <code class="fw:i">ls:.5e</code></div>
