Changed navigation / TOC style.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 	<link rel="apple-touch-icon" href="/blink.png">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-title" content="blinkUI">
-	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 	<meta name="theme-color" content="#f53d5c">
 	<style>
 		/* Site container and spacing: */
@@ -78,7 +77,7 @@
 		<h1 class="m:0 c:red c:w:h">blink<span class="c:b.1"><u>ui</u></span></h1>
 		<p class="m:0"><u>Web and interface design in the <span class="c:red:h">blink</span> of an eye.</u></p>
 	</header>
-	<nav id="toc" class="p:2r">
+	<nav id="toc" class="p:2r ox:s ws:nw brw:medium brw:0@xl bc:red">
 		<ul>
 			<li> <b><a href="#typo">Typography</a></b>
 				<ul>
