--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
 		<!--<a href="#" class="mr:1r c:b:h py:1r">Components</a>-->
 		<div class="d:ib ml:a"><a href="blank.html" class="mr:1r c:b.4 c:b:h py:1r">blank.css</a><a href="https://github.com/blinkui/blinkui.github.io" class="c:b.4 c:b:h py:1r"><span class="mr:.25r d:n d:ib@md">Github</span><svg aria-hidden="true" class="h:2r w:2r p:.25r p:r t:.5r" version="1.1" viewBox="0 0 16 16" width="32"><path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z"></path></svg></a></div>
 	</nav>
-	<div class="bgc:red fs:2r fs:4r@md fs:8r@lg fs:16r@xl fw:100 ff:s c:w.1 p:2r fs:i">blink!</div>
+	<div style="font-family: 'Avenir Next', Avenir" class="bgc:red fs:2r fs:4r@md fs:8r@lg fs:16r@xl fw:100 ff:s c:w.1 p:2r">blink!</div>
 	<header id="top" class="p:2r">
-		<h1 class="m:0 c:red c:w:h">blink<span class="c:b.1"><u>ui</u></span></h1>
-		<p class="m:0"><u>Web and interface design in the <span class="c:red:h">blink</span> of an eye.</u></p>
+		<h1 class="m:0 c:red c:w:h fw:700 ls:-.0625e" style="font-family: 'Avenir Next', Avenir">blink<span class="c:b.2 fw:200 tt:u">ui</span></h1>
+		<p class="m:0 "><u>Web and interface design in the <span class="c:red:h ">blink</span> of an eye.</u></p>
 	</header>
 	<nav id="toc" class="p:2r ox:s ws:nw brw:medium brw:0@xl bc:red">
 		<ul>
