Addition to the letter-spacing module.

--- a/index.html
+++ b/index.html
@@ -236,14 +236,15 @@
 			<article id="typo__letter-spacing">
 				<header>
 					<h3>letter-spacing</h3> </header>
+				<p class="c:b.3 ff:s fs:i">Please notice, that this module makes use of “em” units. Hence the “e”.</p>
 				<div class="fw:100">
-					<div><span class="ls:-.0625e fs:2r fs:4r@md tt:u">-.0625em</span> <code class="fw:i">ls:-.0625e</code></div>
+					<div><span class="ls:-.0625e fs:2r fs:4r@md tt:u">-.0625em</span> <code class="fw:i">ls:-.0625<span class="c:red fw:b">e</span></code></div>
 					<div><span class="ls:n fs:2r fs:4r@md tt:u">normal</span> <code class="fw:i">ls:n</code></div>
 					<div><span class="ls:.0625e fs:2r fs:4r@md tt:u">.0625em</span> <code class="fw:i">ls:.0625e</code></div>
 					<div><span class="ls:.125e fs:2r fs:4r@md tt:u">.125em</span> <code class="fw:i">ls:.125e</code></div>
 					<div><span class="ls:.25e fs:2r fs:4r@md tt:u">.25em</span> <code class="fw:i">ls:.25e</code></div>
 					<div><span class="ls:.5e fs:2r fs:4r@md tt:u">.5em</span> <code class="fw:i">ls:.5e</code></div>
-					<div><span class="ls:1e fs:2r fs:4r@md tt:u">1em</span> <code class="fw:i">ls:.1e</code></div>
+					<div><span class="ls:1e fs:2r fs:4r@md tt:u">1em</span> <code class="fw:i">ls:1e</code></div>
 				</div>
 			</article>
 		</section>
