--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
 	<meta name="apple-mobile-web-app-title" content="blinkUI">
 	<meta name="theme-color" content="#f53d5c">
 	<style>
-		/* Site container and spacing: */
-
 		nav#toc {
 			margin-bottom: var(--2);
 		}
@@ -41,7 +39,6 @@
 			padding: var(--1);
 			font-family: 'Roboto Mono', 'Source Code Pro', Menlo, Consolas, 'Liberation Mono', monospace
 		}
-		/* Fake page transition (fade-in): */
 
 		@keyframes fade {
 			from {
@@ -52,6 +49,7 @@
 		body {
 			animation: 1s fade ease-in-out
 		}
+		/* Fake page transition (fade-in) */
 	</style>
 </head>
 
