Added an icon file for pinned tabs.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link href="css/blank.css" rel="stylesheet">
 	<link href="css/blink.css" rel="stylesheet">
 	<link rel="apple-touch-icon" href="/blink.png">
+	<link rel="mask-icon" href="/blink_icon.svg" color="#f53d5c">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-title" content="blinkUI">
 	<meta name="theme-color" content="#f53d5c">
