--- a/blank.html
+++ b/blank.html
@@ -630,7 +630,8 @@
 		var ctx = c.getContext("2d");
 		ctx.beginPath();
 		ctx.arc(95, 50, 40, 0, 2 * Math.PI);
-		ctx.stroke();circular
+		ctx.stroke();
+		circular
 	</script>
 </body>
 
